fix: keyboard zomming problem on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -50,6 +50,7 @@
 html,
 body {
   height: 100%;
+  overflow: hidden;
 }
 body {
   margin: 0;
@@ -79,6 +80,8 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
+  min-height: 100dvh;
+  overflow: hidden;
 }
 
 /* Avatar header */
@@ -122,8 +125,11 @@ body {
   padding: var(--chat-vpad);
   padding-bottom: max(var(--chat-vpad), env(safe-area-inset-bottom));
   overflow: hidden; /* keep bg layer tidy */
+  overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
+  overscroll-behavior: none;
 }
 .chat > * {
   position: relative;
@@ -222,6 +228,7 @@ form#chatForm.composer {
 /* Input box (borderless) */
 input#chatInput.input {
   flex: 1;
+  font-size: 16px;
   border: none;
   background: var(--chatbox-color);
   color: rgb(100, 100, 100);
